# pywildmatch

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
doc/: pywildmatch_documentation.md  wildmatch_syntax.md
src/pywildmatch/: __init__.py  __main__.py  _lib.py  arg.py  config.py  const.py  disp.py  error.py  ignore.py  log.py  logger.py  match.py  param.py  parse.py
src/pywildmatch/test/: README.md  __main__.py
src/pywildmatch/test/data/: __init__.py  libgit2_data.py  python_fnmatch_data.py  pywildmatch_data.py
src/pywildmatch/test/extra/: wildmatch_exe.c
src/pywildmatch/test/matcher/: libgit2_match.py  python_fnmatch_match.py  pywildmatch_match.py
tests/: conftest.py  test_cpython_fnmatch_data.py  test_error.py  test_libgit2_ignore_data.py  test_match_one.py  validate_pywildmatch_wildmatch_data.py
tests/cpython_fnmatch/tests/: validate_cpython_fnmatch_data.py
tests/data/: cpython_fnmatch_data.py  libgit2_ignore_data.py  libgit2_wildmatch_data.py  pywildmatch_wildmatch_data.py
tests/libgit2/ignore/: Makefile  libgit2_ignore.c
tests/libgit2/tests/: validate_libgit2_ignore_data.py  validate_libgit2_wildmatch_data.py
tests/libgit2/wildmatch/: Makefile  libgit2_wildmatch.c
