[build-system]
requires = ["setuptools>=61.2.0"]
build-backend = "setuptools.build_meta"

[project]
authors = [
    { name = "ꓢꓵꓳꓪꓤꓳꓠꓯꓬꓤ", email = "ryanormous@gmail.com" },
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: System :: Filesystems",
]
description = "python wildmatch"
dynamic = ["version"]
name = "pywildmatch"
requires-python = ">=3.11"

[project.license]
text = "BSD-3-Clause"

[project.optional-dependencies]
test = ["pytest"]

[project.urls]
Homepage = "https://github.com/ryanormous/pywildmatch"
Source = "https://github.com/ryanormous/pywildmatch"

[tool.mypy]
strict = true

[tool.pytest.ini_options]
testpaths = ["tests/test_*.py"]
#pythonpath = [
#    "tests",
#    "src"
#]
pythonpath = ["tests",]
log_cli_format = "%(message)s"
log_cli = true
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning"
]
#disable_test_id_escaping_and_forfeit_all_rights_to_community_support = true
#addopts = "--verbose"

[tool.setuptools.dynamic]
version = {attr = "pywildmatch.__version__"}

