[metadata]
author = ryanormous
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved
    Operating System :: POSIX
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Version Control :: Git
    Topic :: System :: Filesystems
description = python wildmatch
keywords = wildmatch fnmatch git gitignore
license = BSD-3-Clause
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
maintainer = ryanormous
maintainer_email = ryanormous@gmail.com
name = pywildmatch
url = github.com/ryanormous/pywildmatch


[bdist_wheel]
universal = True


[options]
packages = find:
package_dir = = src
include_package_data = true
python_requires = ~=3.3


[tool:pytest]                                                                                                     
testpaths = tests
filterwarnings =
    error

